--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "Etickets_APP",
-    "slug": "Etickets_APP",
+    "name": "Ajudaê",
+    "slug": "ajudae-app",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
